--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
          <section class="cutive-text about-font">
            <p class="center-text">While in grade school, I  first acquired an interest in programming when using CSS and HTML to customize various social media pages for me and my friends. In college, I successfully converted my Chromebook into a gaming compatible computer. I realized that I loved working behind the scenes and working hard to make a program do what I want it to do.</p>
            <p class="center-text">I am eager to become part of a team and grow within a company that will help me develop my skills. I believe that Thinkful will help me tremendously on this journey! I am a very fast learner and eager to gain as much knowledge as possible.</p>
-           <p class="center-text">I am eager to become part of a team and grow within a company that will help me develop my skills. I believe that Thinkful will help me tremendously on this journey! I am a very fast learner and eager to gain as much knowledge as possible.</p>
            <p class="center-text">I am a creative person as well, I draw and play games in my spare time. I plan on using these hobbies to aid in the development of my new career path.</p>
           </section>
           <hr>
@@ -51,6 +50,7 @@
             <p>I would love to connect with others in the programming community! Feel free to contact me or follow me.</p>
             <ol>
               <li><a href="https://github.com/AdrianneTheDeveloper" target="_blank">Github</a></li>
+              <li><a href="linkedin.com/in/adrianne-meredith" target="_blank">LinkedIn</a></li>
               <li><a href="mailto: meredith.adri@gmail.com">Email</a></li>
             </ol>
         </div>
