--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
     <main>
       <!--Inserting an image-->
       <img src="images/picture.JPG" alt="adrianne">
-      <article>
-        <!--First introductory section in article-->
-        <div class="center-text">
+      <div class="center-text">
+        <article>
+         <!--First introductory section in article-->
+      
          <section>
           <h2>Hello! I am Adrianne.</h2>
            <p>I am a software developer based in Houston, TX.</p>
            <p>I am also an artist!</p>
            <ul>
              <!--This class bold's the text of the ul name-->
-             <p class="bold-text">Some of the main mediums I work with:</p>
+             Some of the main mediums I work with:
              <li>Procreate (iPad)</li>
              <li>Graphite</li>
              <li>Colored Pencil</li>
@@ -55,14 +56,14 @@
             <p>I would love to connect with others in the programming community! Feel free to contact me or follow me.</p>
             <ol>
               <li><a href="https://github.com/AdrianneTheDeveloper" target="_blank">Github</a></li>
-              <li><a href="linkedin.com/in/adrianne-meredith" target="_blank">LinkedIn</a></li>
+              <li><a href="https://linkedin.com/in/adriannemeredith" target="_blank">LinkedIn</a></li>
               <!--This link sends the user to a page with an email open and my email in the "to" spot-->
               <li><a href="mailto:meredith.adri@gmail.com">Email</a></li>
             </ol>
           </section>
-        </div>
+        </article>
         
-      </article>
+      </div>
     </main>
 
     <footer>
