update article and ul in html

--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
       <div class="center-text">
         <article>
          <!--First introductory section in article-->
-      
+         <h2>Hello! I am Adrianne.</h2>
          <section>
-          <h2>Hello! I am Adrianne.</h2>
            <p>I am a software developer based in Houston, TX.</p>
            <p>I am also an artist!</p>
            <ul>
-             <!--This class bold's the text of the ul name-->
-             Some of the main mediums I work with:
+             <!--This class bolds the text of the list header only-->
+             <lh class="bold-text">Some of the main mediums I work with:</lh>
              <li>Procreate (iPad)</li>
              <li>Graphite</li>
              <li>Colored Pencil</li>
