update html and css

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
          <!--First introductory section in article-->
          <h2>Hello! I am Adrianne.</h2>
          <section>
-           <p>I am a software developer based in Houston, TX.</p>
+           <h3 class="amatic-text letter-spacing bold-text">I am a software developer based in Houston, TX.</h3>
            <p>I am also an artist!</p>
+           <p class="bold-text">Some of the main mediums I work with:</p>
            <ul>
              <!--This class bolds the text of the list header only-->
-             <lh class="bold-text">Some of the main mediums I work with:</lh>
              <li>Procreate (iPad)</li>
              <li>Graphite</li>
              <li>Colored Pencil</li>
